<resources>
    <string name="app_name">NCD_YGFXY</string>
    <string name="app_version">V 1.0.00</string>
    <string name="device_name">荧光免疫定量分析仪</string>
    <string name="ncd_company_name_text">武汉纽康度生物科技股份有限公司</string>
    <string name="Ncd_Company_Website_text">http://www.whnewcando.com</string>
    <string name="SuperAdminPassword">201300</string>


    /*
    * common
    */
    <string name="actionSuccessText">操作成功</string>
    <string name="ActionFailText">操作失败</string>
    <string name="TestResultErrorText">Error</string>
    <string name="ReportPassText">合格</string>
    <string name="ReportNoPassText">不合格</string>
    <string name="TestDataIntentNameText">TestDataIntent</string>
    <string name="space_string"> </string>


    /*
    *lunch
    */
    <string name="system_init_text">系统初始化...</string>

    <string name="account_text">请输入账号</string>
    <string name="passwd_text">请输入密码</string>
    <string name="remember_passwd_text">记住密码</string>
    <string name="auto_login_text">自动登录</string>
    <string name="login_text">登录</string>

    /*
    * main activity
    */
    <string name="start_test_button_text">开始测试</string>
    <string name="query_data_button_text">数据查询</string>

    /*
    * set activity
    */
    <string name="setting_menu_device_info_text">设备信息</string>
    <string name="setting_menu_user_set_text">操作人管理</string>
    <string name="setting_menu_net_set_text">网络设置</string>
    <string name="setting_menu_data_query_text">数据查询</string>
    <string name="setting_menu_other_set_text">系统设置</string>
    <string name="setting_menu_about_us_text">关于</string>
    <string name="setting_menu_net_select_dialog_title">请选择</string>


    /*
    * user management activity
    */
    <string name="userListText">操作人列表</string>
    <string name="addUserText">添加操作人</string>
    <string name="userInfoTitle">操作人信息</string>
    <string name="userNameIsRequired">操作人姓名缺失！</string>
    <string name="userIdText">工&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="userNameText">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="userSexText">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：</string>
    <string name="userSexWomen">女</string>
    <string name="userSexMen">男</string>
    <string name="userAgeText">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;龄：</string>
    <string name="userDepText">科&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;室：</string>
    <string name="userJobText">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;务：</string>
    <string name="userPhoneText">联系方式：</string>
    <string name="cancelButtonText">取消</string>
    <string name="submitButtonText">提交</string>
    <string name="deleteUserButtonText">删除</string>

    /*
    * data query activity
    */
    <string name="QueryTestDateText">日期:</string>
    <string name="QueryTestItemText">项目:</string>
    <string name="QueryTestSampleIdText">样本号:</string>
    <string name="QueryTesterText">操作人:</string>
    <string name="QueryDataButtonText">查询</string>

    <string name="DataTableIndexTitleText">序号</string>
    <string name="DataTableItemTitleText">测试项目</string>
    <string name="DataTableSampleIdTitleText">样本编号</string>
    <string name="DataTableResultTitleText">结果</string>
    <string name="DataTableDateTitleText">测试时间</string>
    <string name="DataTableTesterTitleText">操作人</string>
    <string name="DataTableReportStatusTitleText">状态</string>


    /*
    * test data detail activity
    */
    <string name="TestItemText">检&#160;测&#160;项&#160;目&#160;:</string>
    <string name="TestSampleIdText">样&#160;本&#160;编&#160;号&#160;:</string>
    <string name="TestCardIdText">试剂卡编号:</string>
    <string name="TestTesterText">操&#160;&#160;&#160;&#160;作&#160;&#160;&#160;&#160;人:</string>
    <string name="TestTimeText">检&#160;测&#160;时&#160;间&#160;:</string>
    <string name="TestResultText">检&#160;测&#160;结&#160;果&#160;:</string>
    <string name="TestNormalText">参考值范围:</string>
    <string name="ReportCheckText">报告审核:</string>
    <string name="UploadReportText">上传报告</string>
    <string name="PrintfReportText">打印报告</string>


    /*
    * about us activity
    */
    <string name="ConmpanyNameText">公司名称：武汉纽康度生物科技股份有限公司</string>
    <string name="ConmpanyAddrText">公司地址：武汉市东湖高新技术开发区高新大道858号生物医药园加速器二期A87-1栋四层</string>
    <string name="ConmpanyPhoneText">联系电话：027-81339588&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;027-81337972     </string>
    <string name="ConmpanyEmailText">企业邮箱：service@whnewcando.com</string>
    <string name="ConmpanyWebText">企业网址：http：//www.whnewcando.com</string>
    <string name="SoftVersionText">软件版本：</string>

    /*
    * sample input activity
    /
    <string name="sample_input_activity_title">样品录入</string>
    <string name="sample_index_string">序号</string>
    <string name="sample_id_string">样品编号</string>
    <string name="sample_sickid_string">病人编号</string>
    <string name="sample_bed_num_string">病人床号</string>
    <string name="sample_name_string">病人姓名</string>
    <string name="sample_item_string">检测项目</string>
    <string name="sample_test_state_string">状态</string>
    <string name="sample_state_no_conf">未配置</string>
    <string name="sample_state_wait">等待中</string>


    <string name="sample_id_input_string">样品编号：</string>
    <string name="sample_name_input_string">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="sample_sex_input_string">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：</string>
    <string name="sample_age_input_string">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;龄：</string>
    <string name="sample_bednum_input_string">床&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="sample_sickid_input_string">病&#160;&#160;案&#160;&#160;号：</string>
    <string name="sample_items_input_string">测试项目：</string>

    <!-- system set activity -->
    <string name="device_id_set_title">设备编号</string>
    <string name="device_user_set_title">责任人</string>
    <string name="device_addr_set_title">设备地址</string>
    <string name="auto_print_set_title">自动打印</string>
    <string name="server_ip_set_title">数据上传IP地址</string>
    <string name="server_port_set_title">数据上传端口</string>
    <string name="wlan_set_title">WLAN设置</string>
    <string name="ethernet_set_title">ETHERNET设置</string>
    <string name="date_time_set_title">时间设置</string>
    <string name="soft_version_title">软件版本</string>
    <string name="root_passwd_text">管理员密码</string>
    <string name="preference_dialog_title">编辑</string>
    <string name="preference_dialog_submit_text">确定</string>
    <string name="preference_dialog_cancel_text">取消</string>



    <!-- motor test -->
    <string name="select_motor_string">选择电机：</string>
    <string name="motor_input_num_hint_string">运行步数</string>
    <string name="start_motor_button_string">启动</string>

    /*
    * url
    */
    <string name="login_url">http://172.20.10.2:8080/NCD_Server/login</string>

    <string name="title_activity_lunch">LunchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="waitting_dialog_text">请等待。。。</string>

    /*
    * msg
    */
    <string name="msg_save_success">保存成功</string>

    /*
    * button text
    */
    <string name="button_back_text">返回</string>
    <string name="button_cancel_text">取消</string>
    <string name="button_confirm_text">确定</string>
    <string name="button_save_text">保存</string>
    <string name="button_unsave_text">取消保存</string>
    <string name="button_connect_text">连接</string>
    <string name="button_add_text">添加</string>
    <string name="button_end_text">完成</string>

    /*
    * dialog title
    */
    <string name="dialog_title_error_text">错误</string>
    <string name="dialog_title_warn_text">警告</string>
    <string name="dialog_title_info_text">信息</string>

    /*
    * dialog content
    */
    <string name="dialog_content_password_error_text">密码错误</string>
    <string name="dialog_content_parm_error_text">参数错误</string>
    <string name="dialog_content_save_fail_text">保存失败</string>
    <string name="dialog_content_server_ip_error_text">服务器 IP 错误</string>
    <string name="dialog_content_server_port_error_text">服务器 端口号 错误</string>

    /*
    * default value
    */
    <string name="device_id_key">device_id</string>
    <string name="device_user_key">device_user</string>
    <string name="device_addr_key">device_addr</string>
    <string name="auto_print_key">auto_print</string>
    <string name="server_ip_key">server_ip</string>
    <string name="server_port_key">server_port</string>
    <string name="wlan_set_key">wlan_set</string>
    <string name="ethernet_set_key">ethernet_set</string>
    <string name="datetime_set_key">datetime_set</string>

    <string name="def_device_id">ygfxy3</string>
    <string name="def_device_user">ygfxy3</string>
    <string name="def_device_addr">ygfxy3</string>
    <bool name="def_auto_print">true</bool>
    <string name="def_server_ip">192.168.1.1</string>
    <string name="def_server_port">9200</string>

</resources>
